--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,7 +2,7 @@
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: "v5.0.0"
+    rev: 'v5.0.0'
     hooks:
       - id: check-merge-conflict
       - id: check-symlinks
@@ -16,10 +16,10 @@ repos:
       - id: trailing-whitespace
 
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: "v1.15.0"
+    rev: 'v1.16.0'
     hooks:
       - id: mypy
-        language_version: "3.9"
+        language_version: '3.9'
         # TODO: find out how to amend mypy, pyright, pre-commit and package requirements.
         # Apparently, there is no easy way to avoid some level of duplication of
         # information when the package is *not* installed, which is the case of tmt
@@ -27,47 +27,47 @@ repos:
         #
         # For now, we simply copy & paste from pyproject.toml :(
         additional_dependencies:
-          - "click>=8.0.3"
-          - "docutils>=0.16"
-          - "fmf>=1.7.0"
-          - "jinja2>=2.11.3"
-          - "packaging>=20"
-          - "pint>=0.16.1"
-          - "pydantic>=1.10.14"
-          - "pygments>=2.7.4"
-          - "requests>=2.25.1"
-          - "ruamel.yaml>=0.16.6"
-          - "urllib3>=1.26.5, <3.0"
-          - "jira>=3.5.0, <4"
+          - 'click>=8.0.3'
+          - 'docutils>=0.16'
+          - 'fmf>=1.7.0'
+          - 'jinja2>=2.11.3'
+          - 'packaging>=20'
+          - 'pint>=0.16.1'
+          - 'pydantic>=2'
+          - 'pygments>=2.7.4'
+          - 'requests>=2.25.1'
+          - 'ruamel.yaml>=0.16.6'
+          - 'urllib3>=1.26.5, <3.0'
+          - 'jira>=3.5.0, <4'
 
           # report-junit
-          - "lxml>=4.6.5"
+          - 'lxml>=4.6.5'
 
           - "typing-extensions>=4.12.2; python_version < '3.13'"
-          - "pytest"
-          - "requre"
+          - 'pytest'
+          - 'requre'
           # Do not install *types-click* - it's not recommended with Click 8 & newer,
           # which is the version a developer encounters given the requirements are not
           # frozen.
-          - "types-Markdown"
+          - 'types-Markdown'
           # prevent conflict between types-requests and urllib3
           - "types-requests<2.31.0.7; python_version < '3.10'"
           - "types-requests; python_version >= '3.10'"
-          - "types-setuptools"
-          - "types-jsonschema"
-          - "types-urllib3"
-          - "types-jinja2"
-          - "types-babel"
-          - "types-docutils"
-          - "types-lxml"
+          - 'types-setuptools'
+          - 'types-jsonschema'
+          - 'types-urllib3'
+          - 'types-jinja2'
+          - 'types-babel'
+          - 'types-docutils'
+          - 'types-lxml'
 
         pass_filenames: false
 
   - repo: https://github.com/RobertCraigie/pyright-python
-    rev: v1.1.399
+    rev: v1.1.401
     hooks:
       - id: pyright
-        language_version: "3.9"
+        language_version: '3.9'
         # TODO: find out how to amend mypy, pyright, pre-commit and package requirements.
         # Apparently, there is no easy way to avoid some level of duplication of
         # information when the package is *not* installed, which is the case of tmt
@@ -75,55 +75,55 @@ repos:
         #
         # For now, we simply copy & paste from pyproject.toml :(
         additional_dependencies:
-          - "click>=8.0.3"
-          - "docutils>=0.16"
-          - "fmf>=1.7.0"
-          - "jinja2>=2.11.3"
-          - "packaging>=20"
-          - "pint>=0.16.1"
-          - "pydantic>=1.10.14"
-          - "pygments>=2.7.4"
-          - "requests>=2.25.1"
-          - "ruamel.yaml>=0.16.6"
-          - "urllib3>=1.26.5, <3.0"
-          - "jira>=3.5.0, <4"
+          - 'click>=8.0.3'
+          - 'docutils>=0.16'
+          - 'fmf>=1.7.0'
+          - 'jinja2>=2.11.3'
+          - 'packaging>=20'
+          - 'pint>=0.16.1'
+          - 'pydantic>=2'
+          - 'pygments>=2.7.4'
+          - 'requests>=2.25.1'
+          - 'ruamel.yaml>=0.16.6'
+          - 'urllib3>=1.26.5, <3.0'
+          - 'jira>=3.5.0, <4'
 
           # report-junit
-          - "lxml>=4.6.5"
+          - 'lxml>=4.6.5'
 
           - "typing-extensions>=4.9.0; python_version < '3.13'"
-          - "pytest"
-          - "requre"
+          - 'pytest'
+          - 'requre'
           # Do not install *types-click* - it's not recommended with Click 8 & newer,
           # which is the version a developer encounters given the requirements are not
           # frozen.
-          - "types-Markdown"
+          - 'types-Markdown'
           # prevent conflict between types-requests and urllib3
           - "types-requests<2.31.0.7; python_version < '3.10'"
           - "types-requests; python_version >= '3.10'"
-          - "types-setuptools"
-          - "types-jsonschema"
-          - "types-urllib3"
-          - "types-jinja2"
-          - "types-babel"
-          - "types-docutils"
-          - "types-lxml"
+          - 'types-setuptools'
+          - 'types-jsonschema'
+          - 'types-urllib3'
+          - 'types-jinja2'
+          - 'types-babel'
+          - 'types-docutils'
+          - 'types-lxml'
 
   - repo: https://github.com/python-jsonschema/check-jsonschema
-    rev: "0.33.0"
+    rev: '0.33.0'
     hooks:
       - id: check-metaschema
-        name: "Check JSON schemas validity"
+        name: 'Check JSON schemas validity'
         files: ^tmt/schemas/.*\.yaml
 
   - repo: https://github.com/adrienverge/yamllint
-    rev: v1.37.0
+    rev: v1.37.1
     hooks:
       - id: yamllint
         files: ^tmt/(?:schemas|steps/prepare/feature)/.*\.yaml
 
   - repo: https://github.com/ansible-community/ansible-lint.git
-    rev: v25.2.1
+    rev: v25.5.0
     hooks:
       - id: ansible-lint
         args:
@@ -139,7 +139,7 @@ repos:
           # in order to be parsed by ansible-lint
 
   - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: v0.11.5
+    rev: v0.11.12
     hooks:
       - id: ruff
         args:
@@ -148,26 +148,26 @@ repos:
       - id: ruff-format
 
   - repo: https://github.com/teemtee/tmt.git
-    rev: 1.46.0
+    rev: 1.49.0
     hooks:
-    - id: tmt-lint
-      additional_dependencies:
-        - "docutils>=0.16"         # 0.16 is the current one available for RHEL9
-        - "packaging>=20"          # 20 seems to be available with RHEL8
-        - "pint<0.20"
-        - "pydantic>=1.10.14"
-        - "pygments>=2.7.4"        # 2.7.4 is the current one available for RHEL9
-        # Help installation by reducing the set of inspected botocore release.
-        # There is *a lot* of them, and hatch might fetch many of them.
-        - "botocore>=1.25.10"      # 1.25.10 is the current one available for RHEL9
-        - "typing-extensions>=4.9.0; python_version < '3.13'"
-        - "fmf>=1.6.0"
+      - id: tmt-lint
+        additional_dependencies:
+          - 'docutils>=0.16' # 0.16 is the current one available for RHEL9
+          - 'packaging>=20' # 20 seems to be available with RHEL8
+          - 'pint<0.20'
+          - 'pydantic>=2'
+          - 'pygments>=2.7.4' # 2.7.4 is the current one available for RHEL9
+          # Help installation by reducing the set of inspected botocore release.
+          # There is *a lot* of them, and hatch might fetch many of them.
+          - 'botocore>=1.25.10' # 1.25.10 is the current one available for RHEL9
+          - "typing-extensions>=4.9.0; python_version < '3.13'"
+          - 'fmf>=1.6.0'
   - repo: https://github.com/codespell-project/codespell
     rev: v2.4.1
     hooks:
       - id: codespell
         additional_dependencies:
-          - tomli  # Required for python < 3.11
+          - tomli # Required for python < 3.11
 
   - repo: https://github.com/djlint/djLint
     rev: v1.36.4
@@ -182,16 +182,15 @@ repos:
       - id: j2lint
         args:
           # j2lint does not consume pyproject.toml
-          - "--ignore"
+          - '--ignore'
           - jinja-statements-indentation
           - jinja-variable-lower-case
           - single-statement-per-line
-          - "--"
+          - '--'
 
   - repo: https://github.com/AleksaC/hadolint-py
     rev: v2.12.1b3
     hooks:
-
       - id: hadolint
         files: ^containers/.*
 
